UIP-2061: Fixed issue where descender characters were cut off in File Drop file name
Change-Id: Ib919cb8a1433127d2f7fc4658ce693e89636c147

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1385,6 +1385,7 @@ input[type=file] {
 
 .input-filedrop__selected-content {
     font-size: 15px;
+    line-height: 15px;
 }
 
 .input-filedrop__selected-text {
