UIP-2024 : fix styling issue with inline checkboxes in the RowBuilder
Change-Id: I8995ab8dcafbe58ce16336acc069f7024b1bf243

--- a/packages/ui-library/src/css/rows/_row-builder.scss
+++ b/packages/ui-library/src/css/rows/_row-builder.scss
@@ -13,13 +13,15 @@
             margin: $spacing-lg 0;
         }
 
-        &--underlined:not(:last-of-type) > :after {
-            border-bottom: 1px solid $color-rabbit-fur;
-            bottom: -$spacing-lg;
-            content: '';
-            left: 0;
-            position: absolute;
-            width: 100%;
+        &--underlined:not(:last-of-type) {
+            &:after {
+                border-bottom: 1px solid $color-rabbit-fur;
+                bottom: -$spacing-lg;
+                content: '';
+                left: 0;
+                position: absolute;
+                width: 100%;
+            }
         }
     }
 
