--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -488,6 +488,8 @@ button.tile-button {
     justify-content: space-between;
     -ms-flex: 1 1 100%;
 
+    $icon-size: 80px;
+
     &:hover,
     &:active,
     &.tile-button--selected {
@@ -495,6 +497,11 @@ button.tile-button {
 
         .tile-button__icon {
             color: $color-active-blue;
+        }
+        .tile-button__icon-container {
+            svg {
+                fill: $color-active-blue;
+            }
         }
     }
 
@@ -527,9 +534,23 @@ button.tile-button {
     }
 
     &__icon {
-        font-size: 80px;
+        font-size: $icon-size;
         color: $color-midnight;
+    }
+    &__icon-container {
+        height: $icon-size;
+        width: $icon-size;
         margin-bottom: $spacing-lg;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img,
+        svg {
+            width: auto;
+            height: auto;
+            max-width: 100%;
+            max-height: 100%;
+        }
     }
 
     &__content {
