UIP-2759 Darken cancel button
Change-Id: I21dc7f128e04356055499316ba3ad30bf5384499

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -84,10 +84,10 @@ button,
         }
     }
     &.cancel {
-        background-color: $color-stratus;
+        background-color: $color-neutral-40;
 
         &:hover {
-            background-color: tint($color-stratus, 10%);
+            background-color: tint($color-neutral-40, 10%);
         }
     }
     &.danger {
