UIP-2043 created reports template and built a new reportFilter component:
Change-Id: I31d0044f5e7286e1ea779bdadebabb44851025ac

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -860,7 +860,6 @@ input[type=file] {
 @import 'inputs/dropdown';
 
 .input-custom-select {
-    padding: $borderSize;   // prevent the highlighted child from overlapping the input border
     display: inline-block;
     vertical-align: top;
     text-align: left;
@@ -2645,7 +2644,7 @@ input[type=file] {
     }
 
     > .input-text {
-        margin: 0 !important;
+        margin-right: 0 !important;
 
         input[type=text] {
             text-align: right;
