--- a/packages/ui-library/src/css/general/_page-header.scss
+++ b/packages/ui-library/src/css/general/_page-header.scss
@@ -14,6 +14,22 @@
             line-height: inherit;
         }
     }
+
+    &--margin-xs {
+        margin-bottom: $spacing-xs;
+    }
+
+    &--margin-sm {
+        margin-bottom: $spacing-sm;
+    }
+
+    &--margin-md {
+        margin-bottom: $spacing-md;
+    }
+
+    &--margin-lg {
+        margin-bottom: $spacing-lg;
+    }
 }
 
 .page-header--underlined {
