--- a/packages/ui-library/src/css/reports.scss
+++ b/packages/ui-library/src/css/reports.scss
@@ -1,8 +1,41 @@
 @import 'globals';
 @import 'mixins';
 
+.reporting-filters {
+    margin-bottom: $spacing-lg;
+
+    &__container {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        padding-top: $spacing-md;
+        background-color: $color-timberwolf;
+    }
+
+    button {
+        margin-top: 25px;
+    }
+
+    &--divider {
+        display: inline-block;
+        border-right: 1px solid $color-stratus;
+        height: 75px;
+        padding-left: $spacing-md;
+    }
+
+    &--inputs {
+        padding-left: $spacing-md;
+    }
+
+    &--button-margin {
+        margin-left: auto;
+        margin-right: $spacing-md;
+    }
+}
+
 
 .report-filters {
+
     $border-color: $color-dolphin;
     $background-color: $color-white;
 
@@ -33,6 +66,7 @@
     .input-textselect {
         vertical-align: bottom;
     }
+
     .input-text {
         input[type=text] {
             background-color: $background-color;
