UIP-2152 Active state for Button
Change-Id: I54d9861ac048a0e170011d1907664b70f4eadbd5

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -352,6 +352,16 @@ button,
     }
 }
 
+.button--active {
+    background: $color-midnight;
+    border-color: $color-midnight;
+    color: $color-white;
+
+    &:hover {
+        color: $color-white;
+        background: tint($color-midnight, 10%);
+    }
+}
 
 button.ellipsis-loader-button {
     .icon-ellipsis {
