UIP-2157 Set a width for Aside component
Change-Id: I1c77074d56f076f24b9b7f100328e04130dcda23

--- a/packages/ui-library/src/css/layout/_aside-container.scss
+++ b/packages/ui-library/src/css/layout/_aside-container.scss
@@ -12,6 +12,22 @@
         @include flexbox-grow(1);
 
         margin-left: $spacing-lg;
+        box-sizing: border-box;
+    }
+
+    &--sm > :last-child {
+        @include flexbox-shrink(0);
+        width: 250px;
+    }
+
+    &--md > :last-child {
+        @include flexbox-shrink(0);
+        width: 400px;
+    }
+
+    &--lg > :last-child {
+        @include flexbox-shrink(0);
+        width: 600px;
     }
 
     &__aside {
