UIP-2138 moved the filters to the right side and changed some margins
Change-Id: If744d659f7dab9935a42126702d752d953b14375

--- a/packages/ui-library/src/css/row-selector.scss
+++ b/packages/ui-library/src/css/row-selector.scss
@@ -28,7 +28,7 @@
     }
 
     &__category-selector {
-        margin-right: $spacing-sm;
+        padding-left: $spacing-xs;
     }
 
     &__column-count {
@@ -86,17 +86,26 @@
         }
     }
     &__column-header {
+        display: flex;
         margin-bottom: $spacing-md;
     }
-    &__column-title {
+
+    &__column-title,
+    &__filters {
         color: $color-slate;
         text-transform: uppercase;
-        margin-right: $spacing-sm;
+        margin-right: 10px;
     }
+
+    &__filters {
+        margin-left: auto; //align filters to right in flexbox
+        margin-right: 0;
+    }
+
     &__filter-label {
         display: inline-block;
-        margin-left: $spacing-sm;
     }
+
     &__column-helptext {
         margin: 0 0 0 $spacing-xs;
     }
